fix: social links alignment

--- a/src/editor/style.scss
+++ b/src/editor/style.scss
@@ -192,6 +192,25 @@
 					padding-bottom: 12px;
 				}
 			}
+
+			&[data-align='center'] {
+				.wp-block-social-links {
+					margin-left: 8px;
+					margin-right: 0;
+				}
+			}
+
+			&[data-align='left'] {
+				.wp-block-social-links {
+					margin-left: 0;
+				}
+			}
+
+			&[data-align='right'] {
+				.wp-block-social-links {
+					margin-right: 0;
+				}
+			}
 		}
 	}
 }
